--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "58b5e931-1c0c-48f9-b006-01a25d684e3c",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6e9bac63-4986-4f31-a017-0cf4469c8797",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "69e68773-eeac-44d0-9097-7703a800b097",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "ad9f8bf6-66ee-4488-82e2-38309e3764e3",
    "metadata": {},
    "outputs": [],
@@ -64,6 +64,7 @@
     "    classes = []\n",
     "    for i in range(len(classificacao)):\n",
     "        distancias = [dist_euclidiana(classificacao[i], a) for a in base_tratada]\n",
+    "        mais_proximo = distancias.index(min(distancias))\n",
     "        distancias = pd.DataFrame(distancias)\n",
     "        distancias.columns = [\"Value\"]\n",
     "        k_vizinhos = distancias.sort_values(by=\"Value\").tail(k)\n",
@@ -73,22 +74,75 @@
     "                \"Iris-versicolor\" : 0,\n",
     "                \"Iris-virginica\" : 0\n",
     "            }\n",
-    "        for j in k_vizinhos:\n",
-    "            if base.iloc[j.index][\"Species\"] == \"Iris-setosa\":\n",
-    "                counter[\"Iris-setosa\"] += 1\n",
-    "            elif base.iloc[j.index][\"Species\"] == \"Iris-versicolor\":\n",
-    "                counter[\"Iris-setosa\"] += 1\n",
-    "            elif base.iloc[j.index][\"Species\"] == \"Iris-virginica\":\n",
-    "                counter[\"Iris-setosa\"] += 1\n",
     "\n",
-    "        maior_ocorrencia = max(counter.items(), key=lambda k: k[1])\n",
+    "        for index, j in k_vizinhos.iterrows():\n",
+    "            if base.iloc[index][\"Species\"] == \"Iris-virginica\":\n",
+    "                counter[\"Iris-virginica\"] += 1\n",
+    "            elif base.iloc[index][\"Species\"] == \"Iris-versicolor\":\n",
+    "                counter[\"Iris-versicolor\"] += 1\n",
+    "            elif base.iloc[index][\"Species\"] == \"Iris-virginica\":\n",
+    "                counter[\"Iris-setosa\"] += 1\n",
+    "        \n",
+    "        maior_ocorrencia = max(counter.items(), key=lambda k:k[1])\n",
     "\n",
-    "        if counter.values().count(maior_ocorrência[1]) > 1:\n",
-    "            classes.append(base.iloc(k_vizinhos.tail(1).index)[\"Species\"])\n",
+    "        values = counter.values()\n",
+    "        if len(values) != len(set(values)):\n",
+    "            classes.append(base.iloc[mais_proximo][\"Species\"])\n",
     "        else:\n",
-    "            classes.append(maior_ocorrencia[0])\n",
+    "            classes.append(maior_ocorrencia)\n",
     "\n",
     "    return pd.DataFrame(classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad687065-60c0-4592-987e-db23e73d0163",
+   "metadata": {},
+   "source": [
+    "- Abaixo, uma função que verifica cada possibilidade de k com a resposta ideal em _respostas-em-ordem.csv_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "ff13525b-fb68-4705-95f2-e8b4f8b54908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcula_erros(base, classificacao):\n",
+    "    base_tratada = base.drop(columns=[\"Species\"]).values\n",
+    "\n",
+    "    erros = []\n",
+    "    respostas = pd.read_csv(\"respostas_em_ordem.csv\")\n",
+    "    for n in range(1, len(base_tratada) + 1):\n",
+    "        classes = k_vizinhos_proximos(base, classificacao, n)\n",
+    "\n",
+    "        erro = 0\n",
+    "        for m in range(len(classes)):\n",
+    "            if classes[0][m] != respostas[\"Species\"][m]:\n",
+    "                erro += 1\n",
+    "\n",
+    "        erros.append(erro)\n",
+    "\n",
+    "    return erros.index(min(erros)) + 1      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "3c5ec205-5fb2-4a8e-a2e8-941dc3214d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calcula_erros(base, classificar))"
    ]
   },
   {
@@ -96,49 +150,26 @@
    "id": "cc9fe404-9b58-4417-8061-d75c8d5234f7",
    "metadata": {},
    "source": [
-    "- Abaixo, é feito um teste considerando 3, 6 e 10 vizinhos"
+    "- Abaixo, é tomado o valor com menos erros e cria um csv, mostrando suas respostas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "id": "f7e54183-9d9e-41f6-9639-2bdd8f48a562",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "must be str, not DataFrame",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;66;03m# resp.columns = [\"Species\"]\u001b[39;00m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;66;03m# resp.to_csv(f\"resposta_knn[{n}].csv\")\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[45], line 3\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m10\u001b[39m]:\n\u001b[1;32m----> 3\u001b[0m         resp \u001b[38;5;241m=\u001b[39m \u001b[43mk_vizinhos_proximos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclassificar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[44], line 18\u001b[0m, in \u001b[0;36mk_vizinhos_proximos\u001b[1;34m(base, classificacao, k)\u001b[0m\n\u001b[0;32m     12\u001b[0m counter \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     13\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-setosa\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m     14\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-versicolor\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m     15\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-virginica\u001b[39m\u001b[38;5;124m\"\u001b[39m : \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     16\u001b[0m     }\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m k_vizinhos:\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mbase\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSpecies\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-setosa\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     19\u001b[0m         counter[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-setosa\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m base\u001b[38;5;241m.\u001b[39miloc[j\u001b[38;5;241m.\u001b[39mindex][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSpecies\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIris-versicolor\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexing.py:1189\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1185\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1186\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[0;32m   1187\u001b[0m     axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m-> 1189\u001b[0m     maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[43mcom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_if_callable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1190\u001b[0m     maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_deprecated_callable_usage(key, maybe_callable)\n\u001b[0;32m   1191\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\common.py:384\u001b[0m, in \u001b[0;36mapply_if_callable\u001b[1;34m(maybe_callable, obj, **kwargs)\u001b[0m\n\u001b[0;32m    373\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;124;03mEvaluate possibly callable input using obj and kwargs if it is callable,\u001b[39;00m\n\u001b[0;32m    375\u001b[0m \u001b[38;5;124;03motherwise return as it is.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    381\u001b[0m \u001b[38;5;124;03m**kwargs\u001b[39;00m\n\u001b[0;32m    382\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    383\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcallable\u001b[39m(maybe_callable):\n\u001b[1;32m--> 384\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmaybe_callable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    386\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m maybe_callable\n",
-      "\u001b[1;31mTypeError\u001b[0m: must be str, not DataFrame"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def main():\n",
-    "    for n in [3, 6, 10]:\n",
-    "        resp = k_vizinhos_proximos(base, classificar, n)\n",
-    "        # resp.columns = [\"Species\"]\n",
-    "        # resp.to_csv(f\"resposta_knn[{n}].csv\")\n",
+    "    menor_erro = calcula_erros(base, classificar)\n",
+    "    classificacao = k_vizinhos_proximos(base, classificar, menor_erro)\n",
+    "    classificacao = pd.DataFrame(classificacao)\n",
+    "    classificacao.columns = [\"Species\"]\n",
+    "    classificacao.to_csv(f\"melhor_classificacao_k{menor_erro}.csv\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4583d090-eb44-4192-a7f6-e34b2fc2c4fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
